tests/snapshots/integration__integration_tests__approval_ui__approval_fails_in_non_tty.snap
---
source: tests/integration_tests/approval_ui.rs
info:
  program: wt
  args:
    - switch
    - "--create"
    - test-non-tty
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: false
exit_code: 1
----- stdout -----
❌ [31mCannot prompt for approval in non-interactive environment[0m

💡 [2mIn CI/CD, use --force to skip prompts. To pre-approve commands, use 'wt config approvals add'[0m

----- stderr -----
🟡 [33m[1m[33mtest-repo[0m[33m needs approval to execute [1m[33m1[0m[33m command:[0m

⚪ post-create:
[107m [0m  [1m[2m[34mecho[0m [2m[32m'test command'[0m[0m
